<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">Корпус ПК 3D</string>
    <string name="cad3d">Редактор корпуса ПК</string>
    <string name="wire_mode_checkbox_title">W</string>
    <string name="show_logs">L+</string>
    <string name="hide_logs">L-</string>
    <string name="clear_logs">Clr</string>
    <string name="prev_debug">&lt;</string>
    <string name="next_debug">&gt;</string>

    <string name="prev_10_debug">&lt; 10</string>
    <string name="next_10_debug">&gt; 10</string>
    <string name="edit_script">Скрипт</string>
    <string name="edit_script_title">Редактор скрипта</string>
    <string name="dialog_ok">ОК</string>
    <string name="dialog_cancel">Отмена</string>
</resources>
